// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Bargraph matches the snapshot with power of 0 1`] = `
<Bargraph
  power={0}
>
  <SvgLoader
    className="power-0"
    onSVGReady={[Function]}
    path="o9-Bargraph-01.svg"
    style={null}
    svgXML={null}
  >
    <ReactSVG
      callback={[Function]}
      className="power-0"
      path="o9-Bargraph-01.svg"
      style={null}
      svgXML={null}
    >
      <svg
        className="power-0"
        data-src="o9-Bargraph-01.svg"
        style={null}
      />
    </ReactSVG>
  </SvgLoader>
</Bargraph>
`;

exports[`Bargraph matches the snapshot with power of 1 1`] = `
<Bargraph
  power={1}
>
  <SvgLoader
    className="power-1"
    onSVGReady={[Function]}
    path="o9-Bargraph-01.svg"
    style={null}
    svgXML={null}
  >
    <ReactSVG
      callback={[Function]}
      className="power-1"
      path="o9-Bargraph-01.svg"
      style={null}
      svgXML={null}
    >
      <svg
        className="power-1"
        data-src="o9-Bargraph-01.svg"
        style={null}
      />
    </ReactSVG>
  </SvgLoader>
</Bargraph>
`;

exports[`Bargraph matches the snapshot with power of 2 1`] = `
<Bargraph
  power={2}
>
  <SvgLoader
    className="power-2"
    onSVGReady={[Function]}
    path="o9-Bargraph-01.svg"
    style={null}
    svgXML={null}
  >
    <ReactSVG
      callback={[Function]}
      className="power-2"
      path="o9-Bargraph-01.svg"
      style={null}
      svgXML={null}
    >
      <svg
        className="power-2"
        data-src="o9-Bargraph-01.svg"
        style={null}
      />
    </ReactSVG>
  </SvgLoader>
</Bargraph>
`;

exports[`Bargraph matches the snapshot with power of 3 1`] = `
<Bargraph
  power={3}
>
  <SvgLoader
    className="power-3"
    onSVGReady={[Function]}
    path="o9-Bargraph-01.svg"
    style={null}
    svgXML={null}
  >
    <ReactSVG
      callback={[Function]}
      className="power-3"
      path="o9-Bargraph-01.svg"
      style={null}
      svgXML={null}
    >
      <svg
        className="power-3"
        data-src="o9-Bargraph-01.svg"
        style={null}
      />
    </ReactSVG>
  </SvgLoader>
</Bargraph>
`;

exports[`Bargraph matches the snapshot with power of 4 1`] = `
<Bargraph
  power={4}
>
  <SvgLoader
    className="power-4"
    onSVGReady={[Function]}
    path="o9-Bargraph-01.svg"
    style={null}
    svgXML={null}
  >
    <ReactSVG
      callback={[Function]}
      className="power-4"
      path="o9-Bargraph-01.svg"
      style={null}
      svgXML={null}
    >
      <svg
        className="power-4"
        data-src="o9-Bargraph-01.svg"
        style={null}
      />
    </ReactSVG>
  </SvgLoader>
</Bargraph>
`;

exports[`Bargraph matches the snapshot with power of 5 1`] = `
<Bargraph
  power={5}
>
  <SvgLoader
    className="power-5"
    onSVGReady={[Function]}
    path="o9-Bargraph-01.svg"
    style={null}
    svgXML={null}
  >
    <ReactSVG
      callback={[Function]}
      className="power-5"
      path="o9-Bargraph-01.svg"
      style={null}
      svgXML={null}
    >
      <svg
        className="power-5"
        data-src="o9-Bargraph-01.svg"
        style={null}
      />
    </ReactSVG>
  </SvgLoader>
</Bargraph>
`;
